Add some changes to the nav

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <header class="header-container">
     <nav>
       <ul>
-        <li>
+        <!-- <li><a href="#">work</a></li>
+        <li><a href="#">technology</a></li>
+        <li><a href="#">contact me</a></li> -->
+        <li class="button-container">
           <button type="button" class="hamburguer"><ion-icon name="menu-outline"></ion-icon></button>
         </li>
-        <li><a href="#">work</a></li>
-        <li><a href="#">technology</a></li>
-        <li><a href="#">contact me</a></li>
       </ul>
     </nav>
   </header>
