--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>This is Solid State</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<div class="logo"><span class="icon"> <i class=" fas fa-laptop-code"></i></span></div>
+							<h2>Kender Bolivar</h2>
+							<p>Full Stack Developer</p>
 						</div>
 					</section>
 
