--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 							<div class="logo"><span class="icon"> <i class=" fas fa-laptop-code"></i></span></div>
 							<h2>Kender Bolivar</h2>
 							<p>Full Stack Developer</p>
-						</div>
 					</section>
 
 				<!-- Wrapper -->
@@ -57,9 +56,15 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">About me</h2>
+										<p>I’m a full Stack developer, eager to learn and grow every day new things to improve as a person and as a developer. </p>
+										<p> <strong>I Work with:</strong>
+											TypeScript, React,
+											HTML5, SASS, Rails,
+												MySQL, Python, Git,
+													GitHub,
+													Mobile/Responsive, TDD. </p>
+										<a href="https://drive.google.com/file/d/15TbdCyQ145KPhvKANBGPTH3FIlOa-vIl/view?usp=sharing" class="special">Take a look at my CV</a>
 									</div>
 								</div>
 							</section>
