Add the projects

--- a/index.html
+++ b/index.html
@@ -72,37 +72,55 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Portfolio</h2>
+									<p>These are some of my apps</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://lit-waters-17418.herokuapp.com/" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<h3 class="major">MCA Social</h3>
+											<p>
+												This is a Twitter redesign Ruby on Rails.
+												I base this project on the Twitter web app. This project is a capstone project for Ruby on Rails framework. 
+												I learned a lot while I was doing the app; It was challenging at the beginning,
+												but I overcome all the difficulties and I created a full stack application. </p>
+											<a href="https://github.com/kenderb/MCA-social" class="special">GitHub</a> 
+											<span>
+												<a href="https://lit-waters-17418.herokuapp.com/" class="special">Live</a>
+											</span>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="http://kenderbolivar.me/HTML-CSS-capstone/" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<h3 class="major">HTML CSS Capstone project</h3>
+											<p>This project is an assignment for the HTML/CSS capstone project base on a reference page to show the knowledge i earn into the module, 
+												I got more practice on this project and all those challenges have done before help me progress.</p>
+											<a href="https://github.com/kenderb/HTML-CSSCapstoneProject" class="special">GitHub</a> 
+											<span>
+												<a href="http://kenderbolivar.me/HTML-CSS-capstone/" class="special">Live</a>
+											</span>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://rawcdn.githack.com/kenderb/RESTAURANT-PAGE-JS/b4997056e12190a744d464b802d76f0df5274a92/dist/index.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<h3 class="major">Restaurant Landing page</h3>
+											<p>I base this project on the practice for DOM manipulation with JavaScript and Webpack.
+												This project is A landing page for a restaurant where you can visit and see the menu that is available on the restaurant, 
+												also you can see a map where the restaurant is located.</p>
+											<a href="https://github.com/kenderb/RESTAURANT-PAGE-JS" class="special">GitHub</a> 
+											<span>
+												<a href="https://rawcdn.githack.com/kenderb/RESTAURANT-PAGE-JS/b4997056e12190a744d464b802d76f0df5274a92/dist/index.html" class="special">Live</a>
+											</span>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">TO-DO list using javaScript</h3>
+											<p>  I base this project on the practice for DOM manipulation with JavaScript, Webpack and working with OOP. 
+												This project is an app to create To-dos and manage your tasks with colors and priorities. 
+												You can include your to-dos on different projects, edit its details and delete the to-do if you completed it.</p>
+											<a href="https://github.com/kenderb/TODO-LIST-JS" class="special">GitHub</a> 
+											<span>
+												<a href="http://kenderbolivar.me/HTML-CSS-capstone/" class="special">Live</a>
+											</span>
 										</article>
 									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
 								</div>
 							</section>
 
