Add social media links near the header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Kender Bolivar</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -43,7 +43,11 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon"> <i class=" fas fa-laptop-code"></i></span></div>
+							<div class="logo">
+								<span class="icon"> <a href="https://github.com/kenderb"><i class="fab fa-github-alt"></i></a> </span> 
+								<span class="icon"> <a href="https://www.linkedin.com/in/kenderbolivar/"><i class="fab fa-linkedin-in"></i></a> </span> 
+								<span class="icon"> <a href="https://twitter.com/KBTarts"><i class="fab fa-twitter"></i></a> </span> 
+							</div>
 							<h2>Kender Bolivar</h2>
 							<p>Full Stack Developer</p>
 					</section>
@@ -117,7 +121,7 @@
 												You can include your to-dos on different projects, edit its details and delete the to-do if you completed it.</p>
 											<a href="https://github.com/kenderb/TODO-LIST-JS" class="special">GitHub</a> 
 											<span>
-												<a href="http://kenderbolivar.me/HTML-CSS-capstone/" class="special">Live</a>
+												<a href="https://rawcdn.githack.com/kenderb/TODO-LIST-JS/42368e1225c956afe7413281c42a01633fba074e/dist/index.html" class="special">Live</a>
 											</span>
 										</article>
 									</section>
