Add the links to the menu

--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="#social-medias">Social Medias</a></li>
+								<li><a href="#about-me">About Me</a></li>
+								<li><a href="#Portfolio">Portfolio</a></li>
+								<li><a href="#Contact-me">Contact me</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -43,7 +42,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo">
+							<div class="logo" id="social-medias">
 								<span class="icon"> <a href="https://github.com/kenderb"><i class="fab fa-github-alt"></i></a> </span> 
 								<span class="icon"> <a href="https://www.linkedin.com/in/kenderbolivar/"><i class="fab fa-linkedin-in"></i></a> </span> 
 								<span class="icon"> <a href="https://twitter.com/KBTarts"><i class="fab fa-twitter"></i></a> </span> 
@@ -60,7 +59,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">About me</h2>
+										<h2 class="major" id="about-me">About me</h2>
 										<p>I’m a full Stack developer, eager to learn and grow every day new things to improve as a person and as a developer. </p>
 										<p> <strong>I Work with:</strong>
 											TypeScript, React,
@@ -76,7 +75,7 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Portfolio</h2>
+									<h2 class="major" id="Portfolio">Portfolio</h2>
 									<p>These are some of my apps</p>
 									<section class="features">
 										<article>
@@ -133,41 +132,13 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
+							<h2 class="major" id="Contact-me">Get in touch</h2>
+							<p>You can email me at  <a href="mailto:kenderbolivar@gmail.com">kenderbolivar@gmail.com</a></p>
 							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-phone">(+57) 319-7837699</li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Kender Bolivar. All rights reserved.</li>
 							</ul>
 						</div>
 					</section>
