--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo" id="social-medias">
-								<span class="icon"> <a href="https://github.com/kenderb"><i class="fab fa-github-alt"></i></a> </span> 
-								<span class="icon"> <a href="https://www.linkedin.com/in/kenderbolivar/"><i class="fab fa-linkedin-in"></i></a> </span> 
-								<span class="icon"> <a href="https://twitter.com/KBTarts"><i class="fab fa-twitter"></i></a> </span> 
+								<span class="icon"> <a  target="_blank"href="https://github.com/kenderb"><i class="fab fa-github-alt"></i></a> </span> 
+								<span class="icon"> <a  target="_blank"href="https://www.linkedin.com/in/kenderbolivar/"><i class="fab fa-linkedin-in"></i></a> </span> 
+								<span class="icon"> <a  target="_blank"href="https://twitter.com/KBTarts"><i class="fab fa-twitter"></i></a> </span> 
 							</div>
 							<h2>Kender Bolivar</h2>
 							<p>Full Stack Developer</p>
@@ -62,7 +62,7 @@
 												MySQL, Python, Git,
 													GitHub,
 													Mobile/Responsive, TDD. </p>
-										<a href="https://drive.google.com/file/d/15TbdCyQ145KPhvKANBGPTH3FIlOa-vIl/view?usp=sharing" class="special">Take a look at my CV</a>
+										<a href="https://drive.google.com/file/d/15TbdCyQ145KPhvKANBGPTH3FIlOa-vIl/view?usp=sharing" class="special" target="_blank">Take a look at my CV</a>
 									</div>
 								</div>
 							</section>
@@ -74,48 +74,48 @@
 									<p>These are some of my apps</p>
 									<section class="features">
 										<article>
-											<a href="https://lit-waters-17418.herokuapp.com/" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a  target="_blank"href="https://lit-waters-17418.herokuapp.com/" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">MCA Social</h3>
 											<p>
 												This is a Twitter redesign Ruby on Rails.
 												I base this project on the Twitter web app. This project is a capstone project for Ruby on Rails framework. 
 												I learned a lot while I was doing the app; It was challenging at the beginning,
 												but I overcome all the difficulties and I created a full stack application. </p>
-											<a href="https://github.com/kenderb/MCA-social" class="special">GitHub</a> 
+											<a  target="_blank"href="https://github.com/kenderb/MCA-social" class="special">GitHub</a> 
 											<span>
-												<a href="https://lit-waters-17418.herokuapp.com/" class="special">Live</a>
+												<a  target="_blank"href="https://lit-waters-17418.herokuapp.com/" class="special">Live</a>
 											</span>
 										</article>
 										<article>
-											<a href="http://kenderbolivar.me/HTML-CSS-capstone/" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a  target="_blank"href="http://kenderbolivar.me/HTML-CSS-capstone/" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">HTML CSS Capstone project</h3>
 											<p>This project is an assignment for the HTML/CSS capstone project base on a reference page to show the knowledge i earn into the module, 
 												I got more practice on this project and all those challenges have done before help me progress.</p>
-											<a href="https://github.com/kenderb/HTML-CSSCapstoneProject" class="special">GitHub</a> 
+											<a  target="_blank"href="https://github.com/kenderb/HTML-CSSCapstoneProject" class="special">GitHub</a> 
 											<span>
-												<a href="http://kenderbolivar.me/HTML-CSS-capstone/" class="special">Live</a>
+												<a  target="_blank"href="http://kenderbolivar.me/HTML-CSS-capstone/" class="special">Live</a>
 											</span>
 										</article>
 										<article>
-											<a href="https://rawcdn.githack.com/kenderb/RESTAURANT-PAGE-JS/b4997056e12190a744d464b802d76f0df5274a92/dist/index.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a  target="_blank"href="https://rawcdn.githack.com/kenderb/RESTAURANT-PAGE-JS/b4997056e12190a744d464b802d76f0df5274a92/dist/index.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3 class="major">Restaurant Landing page</h3>
 											<p>I base this project on the practice for DOM manipulation with JavaScript and Webpack.
 												This project is A landing page for a restaurant where you can visit and see the menu that is available on the restaurant, 
 												also you can see a map where the restaurant is located.</p>
-											<a href="https://github.com/kenderb/RESTAURANT-PAGE-JS" class="special">GitHub</a> 
+											<a  target="_blank"href="https://github.com/kenderb/RESTAURANT-PAGE-JS" class="special">GitHub</a> 
 											<span>
-												<a href="https://rawcdn.githack.com/kenderb/RESTAURANT-PAGE-JS/b4997056e12190a744d464b802d76f0df5274a92/dist/index.html" class="special">Live</a>
+												<a  target="_blank"href="https://rawcdn.githack.com/kenderb/RESTAURANT-PAGE-JS/b4997056e12190a744d464b802d76f0df5274a92/dist/index.html" class="special">Live</a>
 											</span>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a  target="_blank" href="https://rawcdn.githack.com/kenderb/TODO-LIST-JS/42368e1225c956afe7413281c42a01633fba074e/dist/index.html" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3 class="major">TO-DO list using javaScript</h3>
 											<p>  I base this project on the practice for DOM manipulation with JavaScript, Webpack and working with OOP. 
 												This project is an app to create To-dos and manage your tasks with colors and priorities. 
 												You can include your to-dos on different projects, edit its details and delete the to-do if you completed it.</p>
-											<a href="https://github.com/kenderb/TODO-LIST-JS" class="special">GitHub</a> 
+											<a  target="_blank"href="https://github.com/kenderb/TODO-LIST-JS" class="special">GitHub</a> 
 											<span>
-												<a href="https://rawcdn.githack.com/kenderb/TODO-LIST-JS/42368e1225c956afe7413281c42a01633fba074e/dist/index.html" class="special">Live</a>
+												<a  target="_blank"href="https://rawcdn.githack.com/kenderb/TODO-LIST-JS/42368e1225c956afe7413281c42a01633fba074e/dist/index.html" class="special">Live</a>
 											</span>
 										</article>
 									</section>
@@ -129,12 +129,21 @@
 						<div class="inner">
 							<h2 class="major" id="Contact-me">Get in touch</h2>
 							<p>You can email me at  <a href="mailto:kenderbolivar@gmail.com">kenderbolivar@gmail.com</a></p>
+							<div class="footer-logos">
+								<p>My social media</p>
+								<div class="logo" id="social-medias">
+									<span class="icon"> <a  target="_blank"href="https://github.com/kenderb"><i class="fab fa-github-alt"></i></a> </span> 
+									<span class="icon"> <a  target="_blank"href="https://www.linkedin.com/in/kenderbolivar/"><i class="fab fa-linkedin-in"></i></a> </span> 
+									<span class="icon"> <a  target="_blank"href="https://twitter.com/KBTarts"><i class="fab fa-twitter"></i></a> </span> 
+								</div>
+							</div>
 							<ul class="contact">
 								<li class="icon solid fa-phone">(+57) 319-7837699</li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Kender Bolivar. All rights reserved.</li>
 							</ul>
+							
 						</div>
 					</section>
 
